--- a/index.html
+++ b/index.html
@@ -10,14 +10,12 @@
 
 <body>
     git init
+    git remote add origin 
     git add .
-    git commit -m "inserisci messagio qua"
-    git origin //indicare dove pushare
-    git remote add origin
-    git push origin main
-    
     git status
-
+    git commit -m "inserisci messagio qua"
+    git push origin branch | con status puoi vedere il branch da inserire
+    
     <script src="script.js"></script>
 </body>
 
