--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     git status
     git commit -m "inserisci messagio qua"
     git push origin branch | con status puoi vedere il branch da inserire
-    
+
+    ciao
+
     <script src="script.js"></script>
 </body>
 
